--- a/src/components/BlogHome.astro
+++ b/src/components/BlogHome.astro
@@ -12,7 +12,7 @@ const posts = (await getCollection('blog')).sort(
 
 <section id="blog" class="flex flex-col items-center w-full h-full md:max-w-full  justify-center flex-wrap px-4">
 
-  <Title contenido="My Articles" margin="2rem"/>
+  <Title contenido="My Blog" margin="2rem"/>
   <div class="flex self-center gap-[20px] justify-center min-w-[30rem]  md:max-w-full flex-wrap flex-col md:flex-row">
     {
       posts.slice(0, 3).map((post) => (
