--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -16,7 +16,7 @@ const socialLinks = [
 	{
 		title: 'CV',
 		icon: 'tabler:file-cv',
-		href: 'https://drive.google.com/file/d/1FASXOUq4Nj_1fSNlB9ZQOOrp2tCjVCDC/view?usp=drive_link',
+		href: 'https://drive.google.com/file/d/1KJh-i_8RkjFP1jl5WDSIm5xGHTbs9IbA/view',
 
 	},
 ];
