--- a/src/components/skills/components/skills-on-terminal/skillsOnTerminal.astro
+++ b/src/components/skills/components/skills-on-terminal/skillsOnTerminal.astro
@@ -35,6 +35,7 @@ import './skills-on-terminal.css';
 			<TerminalIcon src="/assets/tailwind.svg" color="#08BBD2" name="Tailwind" />
 			<TerminalIcon src="/assets/redux.svg" color="#7D28A1" name="Redux" />
 			<TerminalIcon src="/assets/github.svg" color="#242C7E" name="Github" />
+			<TerminalIcon src="/assets/python.svg" color="#044562" name="Python" />
 		</div>
 	</div>
 </Terminal>
